--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,12 @@
   <%= @user.email %>
 </p>
 
+<p>
+	<b> Posts:</b></br>
+	<% @user.posts.each do |p|%>
+       <%= p.message %></br>
+       <% end %>
+</p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
