Added Devise Integration

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,6 @@
        <%= p.message %></br>
        <% end %>
 </p>
-
+<%= link_to 'New Post' , new_post_path %>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
